Funcionalidade de troca de layout do RecyclerView implementada. Implementação do shared preferences para salvar ultimo layout do recycler escolhido.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Ceep</string>
+    <string name="linear_layout">Linear Layout</string>
+    <string name="salvar_nota">Salvar nota</string>
 </resources>
